--- a/sass/sections/_layout.scss
+++ b/sass/sections/_layout.scss
@@ -3,6 +3,9 @@ body {
   margin: 0;
   box-sizing: border-box;
   background-color: #f5f5f2;
+
+  padding-left: 20vw;
+  padding-top: 50px;
 }
 
 .row {
@@ -24,18 +27,19 @@ body {
 
 .main {
   box-sizing: border-box;
-  height: 100%;
+  // height: 100%;
   position: relative;
-  top: 300px;
-  left: 20%;
-  width: calc(100% - 200px);
+  // top: 300px;
+  // left: 20%;
+  // width: calc(100% - 200px);
+  width: 100%;
   overflow: hidden;
   padding: 15px;
   @media (max-width: 1200px) {
-    left: 200px;
+    // left: 200px;
   }
   @media (max-width: 600px) {
-    width: 100%;
-    left: 0;
+    // width: 100%;
+    // left: 0;
   }
 }
