--- a/sass/sections/_topBar.scss
+++ b/sass/sections/_topBar.scss
@@ -3,6 +3,8 @@
   box-sizing: border-box;
   height: 60px;
   position: fixed;
+  top: 0;
+  left: 0;
   margin: 0;
   width: 100%;
   background-color: white;
@@ -57,7 +59,7 @@
       }
     }
   }
-  ul {
+  &>ul {
     border-bottom: 1px solid #ebebe8;
     border-top: 1px solid #ebebe8;
     padding: 0;
