--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,3 +4,5 @@
 @import "sections/content";
 @import "sections/general";
 @import "sections/components/buttonOrange";
+@import "sections/links";
+@import "sections/personalData";
