--- a/css/style.css
+++ b/css/style.css
@@ -15,39 +15,43 @@ body {
   flex-direction: column;
 }
 
+.layout .container {
+  flex-direction: column;
+  width: calc(100% - 200px);
+}
 @media (max-width: 600px) {
   .layout .container {
     flex-direction: column;
   }
 }
+.layout .container p,
+.layout .container h1,
+.layout .container label {
+  font-family: "Roboto", sans-serif;
+}
 
 .main {
   box-sizing: border-box;
-  height: 100%;
   position: relative;
-  top: 300px;
-  left: 20%;
-  width: calc(100% - 200px);
+  top: 60px;
+  margin-left: 200px;
+  width: 100%;
   overflow: hidden;
   padding: 15px;
 }
-@media (max-width: 1200px) {
-  .main {
-    left: 200px;
-  }
-}
 @media (max-width: 600px) {
   .main {
-    width: 100%;
-    left: 0;
+    margin: 0;
   }
 }
 
 .topBar {
   justify-content: space-between;
   box-sizing: border-box;
-  height: 60px;
+  height: auto;
   position: fixed;
+  top: 0;
+  left: 0;
   margin: 0;
   width: 100%;
   background-color: white;
@@ -59,21 +63,16 @@ body {
     flex-direction: column;
   }
 }
+@media (max-width: 600px) {
+  .topBar .toplinks {
+    height: auto;
+  }
+}
 .topBar .brand {
-  height: 60px;
+  height: auto;
   background-color: #191919;
-  width: 20%;
+  width: 200px;
   justify-content: space-around;
-}
-@media (max-width: 1200px) {
-  .topBar .brand {
-    width: 200px;
-  }
-}
-@media (max-width: 767px) {
-  .topBar .brand {
-    width: 170px;
-  }
 }
 @media (max-width: 600px) {
   .topBar .brand {
@@ -85,20 +84,19 @@ body {
 }
 .topBar .row h1 {
   color: white;
-  padding: 0 20px;
-  margin: 0;
-  padding: 20px;
+  margin: 0 auto;
+  padding: 15px 0;
   font-family: "Courgette", cursive;
 }
-@media (max-width: 1200px) {
-  .topBar .row h1 {
-    font-size: 17px;
-  }
-}
 .topBar .row .hamburger {
-  right: 10px;
+  display: none;
   vertical-align: middle;
-  padding: 0 10px;
+  margin: 0 20px;
+}
+@media (max-width: 600px) {
+  .topBar .row .hamburger {
+    display: block;
+  }
 }
 .topBar .row .hamburger:hover {
   cursor: pointer;
@@ -109,7 +107,7 @@ body {
   background-color: #717171;
   margin: 6px 0;
 }
-.topBar ul {
+.topBar > ul {
   border-bottom: 1px solid #ebebe8;
   border-top: 1px solid #ebebe8;
   padding: 0;
@@ -119,45 +117,47 @@ body {
   list-style: none;
 }
 @media (max-width: 600px) {
-  .topBar ul {
+  .topBar > ul {
     flex-direction: column;
     justify-content: initial;
     border: none;
+    height: auto;
+    order: 3;
   }
 }
-.topBar ul .wallet {
+.topBar > ul .wallet {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
 @media (max-width: 600px) {
-  .topBar ul .wallet {
+  .topBar > ul .wallet {
     display: inline-block;
   }
 }
-.topBar ul .profile {
+.topBar > ul .profile {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
 @media (max-width: 600px) {
-  .topBar ul .profile {
+  .topBar > ul .profile {
     display: inline-block;
   }
 }
-.topBar ul li {
-  height: 60px;
+.topBar > ul li {
+  height: 50px;
   border-left: 1px solid #ebebe8;
   box-sizing: border-box;
   padding: 0 10px;
 }
 @media (max-width: 767px) {
-  .topBar ul li {
+  .topBar > ul li {
     padding: 0;
   }
 }
 @media (max-width: 600px) {
-  .topBar ul li {
+  .topBar > ul li {
     padding: 0;
     width: 100%;
     display: inline-block;
@@ -165,43 +165,59 @@ body {
     border: none;
   }
 }
-.topBar ul li:hover {
+.topBar > ul li:hover {
   background-color: lightgrey;
 }
-.topBar ul li:hover p {
+.topBar > ul li:hover p {
   color: black;
 }
-.topBar ul li:hover svg {
+.topBar > ul li:hover svg {
   fill: black;
 }
-.topBar ul li a {
+@media (max-width: 600px) {
+  .topBar > ul li:hover {
+    background-color: #282828;
+  }
+  .topBar > ul li:hover p {
+    color: white;
+  }
+  .topBar > ul li:hover svg {
+    fill: white;
+  }
+}
+.topBar > ul li a {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   text-decoration: none;
   vertical-align: middle;
 }
-.topBar ul li a svg {
+.topBar > ul li a svg {
   padding: 0 10px;
   width: 20px;
   height: auto;
   fill: #919191;
 }
-.topBar ul li a p {
+.topBar > ul li a p {
   font-size: 17px;
   color: #46657b;
-  margin: auto 10px;
+  margin: auto 5px;
   font-weight: bold;
   font-family: "Roboto", sans-serif;
 }
 @media (max-width: 767px) {
-  .topBar ul li a p {
+  .topBar > ul li a p {
     font-size: 13px;
   }
 }
-.topBar ul li a img {
+@media (max-width: 600px) {
+  .topBar > ul li a p {
+    font-size: 20px;
+  }
+}
+.topBar > ul li a img {
   width: 25px;
   height: 100%;
   margin: 0 10px;
@@ -209,25 +225,16 @@ body {
 
 .sideBar {
   background-color: #191919;
-  width: 20%;
+  width: 200px;
   top: 60px;
   height: 100%;
   position: fixed;
 }
-@media (max-width: 1200px) {
-  .sideBar {
-    width: 200px;
-  }
-}
-@media (max-width: 767px) {
-  .sideBar {
-    width: 170px;
-  }
-}
 @media (max-width: 600px) {
   .sideBar {
-    position: relative;
-    top: 300px;
+    position: static;
+    order: 2;
+    width: 100%;
   }
 }
 .sideBar ul {
@@ -268,6 +275,11 @@ body {
     padding: 0 15px;
   }
 }
+@media (max-width: 600px) {
+  .sideBar ul li svg {
+    padding-left: 150px;
+  }
+}
 .sideBar ul li p {
   vertical-align: middle;
   margin: auto 10px;
@@ -275,24 +287,29 @@ body {
   font-size: 20px;
   font-family: "Roboto", sans-serif;
 }
-@media (max-width: 1200px) {
+@media (max-width: 600px) {
   .sideBar ul li p {
-    font-size: 17px;
+    padding-left: 30px;
   }
 }
 .sideBar .sideLinks {
   width: 100%;
-  padding-bottom: 30px;
   border-bottom: 1px solid #424242;
 }
 .sideBar .sideLinks li {
   width: 100%;
+}
+@media (max-width: 600px) {
+  .sideBar .sideLinks li {
+    justify-content: end;
+  }
 }
 .sideBar .sideLinks .active {
   background-color: #282828;
 }
 .sideBar .sideLinks .active svg {
   fill: white;
+  margin-left: 40px;
 }
 .sideBar .sideLinks .active p {
   color: white;
@@ -305,6 +322,11 @@ body {
 }
 .sideBar .chat {
   padding: 15px;
+}
+@media (max-width: 600px) {
+  .sideBar .chat {
+    padding-left: 50px;
+  }
 }
 .sideBar .chat h1 {
   color: #919191;
@@ -326,6 +348,11 @@ body {
 }
 .sideBar .chat p {
   color: #46657b;
+  font-size: 20px;
+}
+
+.show {
+  display: none;
 }
 
 .content {
@@ -348,6 +375,8 @@ body {
   justify-content: center;
   padding: 30px 0;
   border-bottom: 1px solid #ebebe8;
+  justify-content: center;
+  margin: auto;
 }
 .calendar input {
   height: 40px;
@@ -356,8 +385,8 @@ body {
   padding: 5px;
 }
 .calendar button {
-  margin-left: 15px;
   align-items: center;
+  margin-left: 15px;
 }
 .calendar button svg {
   height: auto;
@@ -370,13 +399,13 @@ body {
   margin: 0 auto;
 }
 .stats .row {
-  justify-content: center;
+  justify-content: space-around;
 }
 .stats .row .stat {
-  margin: 0 50px;
   width: 30%;
   border-bottom: 1px solid #ebebe8;
   justify-content: space-between;
+  min-width: 150px;
 }
 .stats .row .stat p {
   font-size: 18px;
@@ -439,8 +468,9 @@ body {
 .charts .chart {
   margin: auto;
 }
-.charts .chart img {
-  width: 100%;
+.charts .chart canvas {
+  min-width: 330px;
+  margin-bottom: 40px;
 }
 
 .btn-orange {
@@ -450,6 +480,110 @@ body {
   height: 40px;
   border-radius: 3px;
   cursor: pointer;
+  color: white;
+}
+
+.links {
+  text-align: center;
+}
+.links button {
+  padding: 0 15px;
+  margin: 20px 0;
+}
+.links button p {
+  margin: auto 0;
+  font-size: 20px;
+}
+
+.linkList ul {
+  padding: 0;
+}
+.linkList ul li {
+  border-top: 2px solid #ebebe8;
+  width: 80%;
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+.linkList ul li:hover {
+  background-color: #f1f3f3;
+}
+.linkList ul li .linkEl {
+  display: flex;
+  width: 80%;
+  justify-content: space-between;
+}
+.linkList ul li .linkEl p {
+  display: inline-block;
+  color: #919191;
+  margin: 16px 5px;
+}
+.linkList ul li .linkEl a {
+  display: inline-block;
+  margin: auto 0;
+  text-decoration: none;
+  color: #46657b;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.linkList ul li .linkControl div {
+  width: 20px;
+  height: 100%;
+}
+.linkList ul li .linkControl div svg {
+  padding: 0 3px;
+  width: 20px;
+  height: 100%;
+  fill: white;
+}
+.linkList ul li .linkControl div svg:hover {
+  fill: orange;
+  cursor: pointer;
+}
+.linkList ul li .linkControl svg {
+  padding: 0 3px;
+  width: 20px;
+  height: 100%;
+  fill: white;
+}
+.linkList ul li .linkControl svg:hover {
+  fill: orange;
+  cursor: pointer;
+}
+
+.linkList ul li:hover svg {
+  fill: black;
+}
+
+.personalData {
+  text-align: center;
+}
+.personalData .formSec {
+  width: 30%;
+  margin: auto;
+  min-width: 330px;
+  padding: 40px 0;
+  border-bottom: 1px solid #ebebe8;
+}
+.personalData .formSec .btn-orange {
+  padding: 10px 20px;
+  font-size: 20px;
+}
+.personalData .formSec .field {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.personalData .formSec .field label {
+  font-size: 20px;
+  color: #46657b;
+}
+.personalData .formSec .field input {
+  width: 50%;
+  border: 2px solid #ebebe8;
+  border-radius: 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
