--- a/sass/sections/_layout.scss
+++ b/sass/sections/_layout.scss
@@ -3,9 +3,6 @@ body {
   margin: 0;
   box-sizing: border-box;
   background-color: #f5f5f2;
-
-  padding-left: 20vw;
-  padding-top: 50px;
 }
 
 .row {
@@ -19,27 +16,28 @@ body {
 }
 .layout {
   .container {
+    flex-direction: column;
+    width: calc(100% - 200px);
     @media (max-width: 600px) {
       flex-direction: column;
+    }
+    p,
+    h1,
+    label {
+      font-family: "Roboto", sans-serif;
     }
   }
 }
 
 .main {
   box-sizing: border-box;
-  // height: 100%;
   position: relative;
-  // top: 300px;
-  // left: 20%;
-  // width: calc(100% - 200px);
+  top: 60px;
+  margin-left: 200px;
   width: 100%;
   overflow: hidden;
   padding: 15px;
-  @media (max-width: 1200px) {
-    // left: 200px;
-  }
   @media (max-width: 600px) {
-    // width: 100%;
-    // left: 0;
+    margin: 0;
   }
 }
