--- a/sass/sections/_sideBar.scss
+++ b/sass/sections/_sideBar.scss
@@ -1,18 +1,13 @@
 .sideBar {
   background-color: #191919;
-  width: 20%;
+  width: 200px;
   top: 60px;
   height: 100%;
   position: fixed;
-  @media (max-width: 1200px) {
-    width: 200px;
-  }
-  @media (max-width: 767px) {
-    width: 170px;
-  }
   @media (max-width: 600px) {
-    position: relative;
-    top: 300px;
+    position: static;
+    order: 2;
+    width: 100%;
   }
   ul {
     margin: 0;
@@ -44,6 +39,9 @@
         @media (max-width: 1200px) {
           padding: 0 15px;
         }
+        @media (max-width: 600px) {
+          padding-left: 150px;
+        }
         width: 20px;
         height: auto;
         fill: #919191;
@@ -54,23 +52,26 @@
         color: #919191;
         font-size: 20px;
         font-family: "Roboto", sans-serif;
-        @media (max-width: 1200px) {
-          font-size: 17px;
+        @media (max-width: 600px) {
+          padding-left: 30px;
         }
       }
     }
   }
   .sideLinks {
     width: 100%;
-    padding-bottom: 30px;
     border-bottom: 1px solid #424242;
     li {
       width: 100%;
+      @media (max-width: 600px) {
+        justify-content: end;
+      }
     }
     .active {
       background-color: #282828;
       svg {
         fill: white;
+        margin-left: 40px;
       }
       p {
         color: white;
@@ -85,6 +86,9 @@
   }
   .chat {
     padding: 15px;
+    @media (max-width: 600px) {
+      padding-left: 50px;
+    }
     h1 {
       color: #919191;
       font-size: 17px;
@@ -103,6 +107,11 @@
     }
     p {
       color: #46657b;
+      font-size: 20px;
     }
   }
+}
+
+.show {
+  display: none;
 }
