--- a/sass/sections/_topBar.scss
+++ b/sass/sections/_topBar.scss
@@ -1,7 +1,7 @@
 .topBar {
   justify-content: space-between;
   box-sizing: border-box;
-  height: 60px;
+  height: auto;
   position: fixed;
   top: 0;
   left: 0;
@@ -15,39 +15,34 @@
   }
   .toplinks {
     @media (max-width: 600px) {
+      height: auto;
     }
   }
   .brand {
-    height: 60px;
+    height: auto;
     background-color: #191919;
-    width: 20%;
+    width: 200px;
     justify-content: space-around;
-    @media (max-width: 1200px) {
-      width: 200px;
-    }
-    @media (max-width: 767px) {
-      width: 170px;
-    }
     @media (max-width: 600px) {
       width: 100%;
     }
   }
+
   .row {
     align-items: center;
     h1 {
       color: white;
-      padding: 0 20px;
-      margin: 0;
-      padding: 20px;
+      margin: 0 auto;
+      padding: 15px 0;
       font-family: "Courgette", cursive;
-      @media (max-width: 1200px) {
-        font-size: 17px;
-      }
     }
     .hamburger {
-      right: 10px;
+      display: none;
       vertical-align: middle;
-      padding: 0 10px;
+      margin: 0 20px;
+      @media (max-width: 600px) {
+        display: block;
+      }
       &:hover {
         cursor: pointer;
       }
@@ -59,7 +54,7 @@
       }
     }
   }
-  &>ul {
+  & > ul {
     border-bottom: 1px solid #ebebe8;
     border-top: 1px solid #ebebe8;
     padding: 0;
@@ -71,6 +66,8 @@
       flex-direction: column;
       justify-content: initial;
       border: none;
+      height: auto;
+      order: 3;
     }
     .wallet {
       display: flex;
@@ -89,7 +86,7 @@
       }
     }
     li {
-      height: 60px;
+      height: 50px;
       border-left: 1px solid #ebebe8;
       box-sizing: border-box;
       padding: 0 10px;
@@ -111,13 +108,22 @@
         svg {
           fill: black;
         }
+        @media (max-width: 600px) {
+          background-color: #282828;
+          p {
+            color: white;
+          }
+          svg {
+            fill: white;
+          }
+        }
       }
       a {
         width: 100%;
         height: 100%;
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: center;
         text-decoration: none;
         vertical-align: middle;
         svg {
@@ -129,11 +135,14 @@
         p {
           font-size: 17px;
           color: #46657b;
-          margin: auto 10px;
+          margin: auto 5px;
           font-weight: bold;
           font-family: "Roboto", sans-serif;
           @media (max-width: 767px) {
             font-size: 13px;
+          }
+          @media (max-width: 600px) {
+            font-size: 20px;
           }
         }
         img {
