--- a/sass/sections/_general.scss
+++ b/sass/sections/_general.scss
@@ -4,15 +4,24 @@
   border-bottom: 1px solid #ebebe8;
   justify-content: center;
   margin: auto;
+  @media (max-width: 480px) {
+    flex-direction: column;
+    text-align: center;
+  }
   input {
     height: 40px;
     box-sizing: border-box;
     border: 1px solid #ebebe8;
     padding: 5px;
+    width: 120px;
   }
   button {
     align-items: center;
     margin-left: 15px;
+    @media (max-width: 480px) {
+      margin: 0 auto;
+      width: 70%;
+    }
     svg {
       height: auto;
       width: 18px;
@@ -26,17 +35,30 @@
   margin: 0 auto;
   .row {
     justify-content: space-around;
+    @media (max-width: 480px) {
+      flex-direction: column;
+    }
     .stat {
       width: 30%;
       border-bottom: 1px solid #ebebe8;
       justify-content: space-between;
       min-width: 150px;
+      @media (max-width: 480px) {
+        width: 80%;
+        margin: auto;
+        flex-direction: row;
+      }
       p {
         font-size: 18px;
         font-weight: bold;
         margin: 10px;
         color: #919191;
         font-family: "Roboto", sans-serif;
+        @media (max-width: 480px) {
+          font-size: 17px;
+          margin: 10px 0;
+          text-align: center;
+        }
       }
       span {
         padding: 0 100px;
@@ -47,7 +69,7 @@
 
 .legend {
   margin: 0 auto;
-  padding: 40px 15px;
+  padding: 40px 0;
   h1 {
     color: #919191;
     font-family: "Roboto", sans-serif;
@@ -55,13 +77,16 @@
   }
   .chartElements {
     justify-content: center;
+    @media (max-width: 480px) {
+      flex-direction: column;
+    }
     .chartEl {
       padding: 0 15px;
       background-color: #f3f3f1;
-      margin: 0 20px;
-      @media (max-width: 767px) {
-        margin: 0 10px;
+      @media (max-width: 480px) {
+        margin: 5px;
       }
+      margin: 0 5px;
       .circle {
         width: 20px;
         height: 20px;
@@ -93,7 +118,7 @@
   .chart {
     margin: auto;
     canvas {
-      min-width: 330px;
+      min-width: 270px;
       margin-bottom: 40px;
     }
   }
