--- a/sass/sections/_links.scss
+++ b/sass/sections/_links.scss
@@ -22,59 +22,48 @@
       margin: 0 auto;
       &:hover {
         background-color: #f1f3f3;
-      }
-      .linkEl {
-        display: flex;
-        width: 80%;
-        justify-content: space-between;
-        p {
-          display: inline-block;
-          color: #919191;
-          margin: 16px 5px;
-        }
-        a {
-          display: inline-block;
-          margin: auto 0;
-          text-decoration: none;
-          color: #46657b;
-          overflow: hidden;
-          text-overflow: ellipsis;
-        }
-      }
-      .linkControl {
-        div {
-          width: 20px;
-          height: 100%;
-          svg {
-            padding: 0 3px;
-            width: 20px;
-            height: 100%;
-            fill: white;
-            &:hover {
-              fill: orange;
-              cursor: pointer;
-            }
-          }
-        }
         svg {
           padding: 0 3px;
           width: 20px;
           height: 100%;
-          fill: white;
-          &:hover {
-            fill: orange;
-            cursor: pointer;
-          }
+          fill: black;
+          opacity: 1;
         }
       }
     }
-  }
-}
-
-.linkList {
-  ul {
-    li:hover svg {
-      fill: black;
+    .linkEl {
+      display: flex;
+      width: 80%;
+      justify-content: space-between;
+      @media (max-width: 480px) {
+        flex-direction: column;
+      }
+      p {
+        display: inline-block;
+        color: #919191;
+        margin: 16px 5px;
+      }
+      a {
+        display: inline-block;
+        margin: auto 0;
+        text-decoration: none;
+        color: #46657b;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+    .linkControl {
+      svg {
+        padding: 0 3px;
+        width: 20px;
+        height: 100%;
+        fill: black;
+        opacity: 0;
+        cursor: pointer;
+        &:hover {
+          fill: orange;
+        }
+      }
     }
   }
 }
