--- a/sass/sections/_sideBar.scss
+++ b/sass/sections/_sideBar.scss
@@ -4,6 +4,7 @@
   top: 60px;
   height: 100%;
   position: fixed;
+  flex-direction: column;
   @media (max-width: 600px) {
     position: static;
     order: 2;
@@ -39,9 +40,6 @@
         @media (max-width: 1200px) {
           padding: 0 15px;
         }
-        @media (max-width: 600px) {
-          padding-left: 150px;
-        }
         width: 20px;
         height: auto;
         fill: #919191;
@@ -65,6 +63,8 @@
       width: 100%;
       @media (max-width: 600px) {
         justify-content: end;
+        padding-left: 20%;
+        width: 80%;
       }
     }
     .active {
