--- a/sass/sections/_topBar.scss
+++ b/sass/sections/_topBar.scss
@@ -9,9 +9,15 @@
   width: 100%;
   background-color: white;
   z-index: 1;
+  .show {
+    @media (min-width: 601px) {
+      display: flex;
+    }
+  }
   @media (max-width: 600px) {
     width: 100%;
     flex-direction: column;
+    height: 100vh;
   }
   .toplinks {
     @media (max-width: 600px) {
@@ -89,7 +95,6 @@
       height: 50px;
       border-left: 1px solid #ebebe8;
       box-sizing: border-box;
-      padding: 0 10px;
       @media (max-width: 767px) {
         padding: 0;
       }
