--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,3 +6,5 @@
 @import "sections/components/buttonOrange";
 @import "sections/links";
 @import "sections/personalData";
+@import "sections/payout";
+@import "sections/modal";
