--- a/sass/sections/_personalData.scss
+++ b/sass/sections/_personalData.scss
@@ -6,6 +6,9 @@
     min-width: 330px;
     padding: 40px 0;
     border-bottom: 1px solid #ebebe8;
+    @media (max-width: 480px) {
+      min-width: 270px;
+    }
     .btn-orange {
       padding: 10px 20px;
       font-size: 20px;
