--- a/css/style.css
+++ b/css/style.css
@@ -51,18 +51,24 @@ body {
     margin: 0;
   }
 }
+@media (max-width: 480px) {
+  .main {
+    padding: 15px 0;
+  }
+}
 
 .topBar {
   justify-content: space-between;
   box-sizing: border-box;
   height: auto;
   position: fixed;
+  background: white;
   top: 0;
   left: 0;
   margin: 0;
   width: 100%;
-  background-color: white;
   z-index: 1;
+  border-bottom: 1px solid #ebebe8;
 }
 @media (min-width: 601px) {
   .topBar .show {
@@ -73,7 +79,9 @@ body {
   .topBar {
     width: 100%;
     flex-direction: column;
-    height: 100vh;
+    height: auto;
+    background: initial;
+    border: none;
   }
 }
 @media (max-width: 600px) {
@@ -121,7 +129,6 @@ body {
   margin: 6px 0;
 }
 .topBar > ul {
-  border-bottom: 1px solid #ebebe8;
   border-top: 1px solid #ebebe8;
   padding: 0;
   margin: 0;
@@ -159,7 +166,7 @@ body {
   }
 }
 .topBar > ul li {
-  height: 50px;
+  height: 60px;
   border-left: 1px solid #ebebe8;
   box-sizing: border-box;
 }
@@ -275,7 +282,7 @@ body {
   content: "";
   position: absolute;
   height: 50px;
-  border: 2px solid #f58220;
+  border: 1px solid #f58220;
 }
 .sideBar ul li svg {
   padding: 0 20px;
@@ -355,6 +362,7 @@ body {
   height: 50px;
   background-size: cover;
   margin: 0 10px 0 0;
+  cursor: pointer;
 }
 .sideBar .chat p {
   color: #46657b;
@@ -365,6 +373,12 @@ body {
   display: none;
 }
 
+@media (max-width: 600px) {
+  .showMenu {
+    display: none;
+  }
+}
+
 .content {
   background-color: white;
   width: 100%;
@@ -372,7 +386,7 @@ body {
 }
 .content .contentTitle {
   padding: 10px 15px;
-  border-bottom: 1px solid #ebebe8;
+  border-bottom: 2px solid #ebebe8;
 }
 .content .contentTitle h1 {
   font-size: 17px;
@@ -384,7 +398,7 @@ body {
 .calendar {
   justify-content: center;
   padding: 30px 0;
-  border-bottom: 1px solid #ebebe8;
+  border-bottom: 2px solid #ebebe8;
   justify-content: center;
   margin: auto;
 }
@@ -394,12 +408,18 @@ body {
     text-align: center;
   }
 }
-.calendar input {
+.calendar label input {
   height: 40px;
   box-sizing: border-box;
   border: 1px solid #ebebe8;
   padding: 5px;
   width: 120px;
+}
+@media (max-width: 480px) {
+  .calendar label input {
+    width: 180px;
+    margin-bottom: 15px;
+  }
 }
 .calendar button {
   align-items: center;
@@ -408,7 +428,7 @@ body {
 @media (max-width: 480px) {
   .calendar button {
     margin: 0 auto;
-    width: 70%;
+    width: 40%;
   }
 }
 .calendar button svg {
@@ -431,7 +451,7 @@ body {
 }
 .stats .row .stat {
   width: 30%;
-  border-bottom: 1px solid #ebebe8;
+  border-bottom: 2px solid #ebebe8;
   justify-content: space-between;
   min-width: 150px;
 }
@@ -536,9 +556,6 @@ body {
 .links button {
   padding: 0 15px;
   margin: 20px 0;
-}
-.links button p {
-  margin: auto 0;
   font-size: 20px;
 }
 
@@ -563,6 +580,9 @@ body {
   fill: black;
   opacity: 1;
 }
+.linkList ul li:last-of-type {
+  border-bottom: 2px solid #ebebe8;
+}
 .linkList ul .linkEl {
   display: flex;
   width: 80%;
@@ -571,6 +591,8 @@ body {
 @media (max-width: 480px) {
   .linkList ul .linkEl {
     flex-direction: column;
+    width: 70%;
+    text-align: left;
   }
 }
 .linkList ul .linkEl p {
@@ -580,11 +602,16 @@ body {
 }
 .linkList ul .linkEl a {
   display: inline-block;
-  margin: auto 0;
+  margin: 16px 5px;
   text-decoration: none;
   color: #46657b;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+@media (max-width: 480px) {
+  .linkList ul .linkEl a {
+    margin-bottom: 10px;
+  }
 }
 .linkList ul .linkControl svg {
   padding: 0 3px;
@@ -597,40 +624,55 @@ body {
 .linkList ul .linkControl svg:hover {
   fill: orange;
 }
+@media (max-width: 480px) {
+  .linkList ul .linkControl svg {
+    opacity: 1;
+  }
+}
 
 .personalData {
   text-align: center;
 }
 .personalData .formSec {
-  width: 30%;
-  margin: auto;
-  min-width: 330px;
-  padding: 40px 0;
+  padding: 20px 0;
   border-bottom: 1px solid #ebebe8;
-}
-@media (max-width: 480px) {
-  .personalData .formSec {
-    min-width: 270px;
-  }
 }
 .personalData .formSec .btn-orange {
   padding: 10px 20px;
   font-size: 20px;
 }
-.personalData .formSec .field {
+.personalData .formSec div {
+  width: 40%;
+  min-width: 330px;
+  margin: auto;
+}
+@media (max-width: 480px) {
+  .personalData .formSec div {
+    min-width: 270px;
+  }
+}
+.personalData .formSec div .field {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 10px;
+  margin: 20px 0;
 }
-.personalData .formSec .field label {
-  font-size: 20px;
-  color: #46657b;
-}
-.personalData .formSec .field input {
-  width: 50%;
+.personalData .formSec div .field input {
+  width: 40%;
   border: 2px solid #ebebe8;
   border-radius: 5px;
+  padding: 0 15px;
+  font-size: 20px;
+}
+@media (max-width: 480px) {
+  .personalData .formSec div .field input {
+    width: 30%;
+  }
+}
+.personalData .formSec div .field label {
+  font-size: 20px;
+  color: #46657b;
 }
 
 .payout {
@@ -640,34 +682,75 @@ body {
   border-collapse: collapse;
   border-spacing: 0;
   width: 100%;
-  border: 1px solid #ddd;
+  border-bottom: 2px solid #ddd;
 }
-.payout table th,
+.payout table p {
+  display: inline-block;
+  font-size: 15px;
+  color: #919191;
+  padding: 7px;
+}
+.payout table p:hover {
+  background: #f6f6f6;
+  color: black;
+}
+.payout table p:hover svg {
+  opacity: 1;
+}
+.payout table p svg {
+  width: 10px;
+  margin: auto 5px;
+  opacity: 0;
+}
+.payout table th {
+  text-align: left;
+  padding: 10px 15px;
+}
 .payout table td {
   text-align: left;
-  padding: 10px 8px;
+  padding: 10px 15px;
+  height: 30px;
 }
 .payout table tr {
-  border-bottom: 1px solid #ebebe8;
+  border-bottom: 2px solid #ebebe8;
+  cursor: pointer;
 }
 .payout table tr:hover {
   background: #eaeaea;
 }
+.payout table .tableHead:hover {
+  background: initial;
+}
 
 .pagination {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   padding: 15px 0;
+  margin: auto;
 }
-.pagination a {
-  color: black;
-  float: left;
+.pagination div {
+  display: flex;
+  flex-direction: row;
+  overflow-y: auto;
+}
+.pagination div a {
+  display: inline-block;
+  color: #46657b;
   padding: 8px 16px;
   text-decoration: none;
 }
+.pagination div a:hover {
+  background: #f4f4f1;
+  color: black;
+}
+.pagination div a svg {
+  fill: black;
+  width: 10px;
+}
 
-.bg-modal-uplink, .bg-modal-downbanner, .bg-modal-upbanner, .bg-modal-downlink {
+.bg-modal-uplink, .bg-modal-exit, .bg-modal-message, .bg-modal-downbanner, .bg-modal-linkChange, .bg-modal-upbanner, .bg-modal-downlink {
   background-color: rgba(0, 0, 0, 0.8);
   width: calc(100% - 200px);
   height: 100vh;
@@ -678,12 +761,12 @@ body {
   align-items: center;
 }
 @media (max-width: 600px) {
-  .bg-modal-uplink, .bg-modal-downbanner, .bg-modal-upbanner, .bg-modal-downlink {
+  .bg-modal-uplink, .bg-modal-exit, .bg-modal-message, .bg-modal-downbanner, .bg-modal-linkChange, .bg-modal-upbanner, .bg-modal-downlink {
     width: 100%;
   }
 }
-.bg-modal-uplink .modal-contents, .bg-modal-downbanner .modal-contents, .bg-modal-upbanner .modal-contents, .bg-modal-downlink .modal-contents {
-  height: 300px;
+.bg-modal-uplink .modal-contents, .bg-modal-exit .modal-contents, .bg-modal-message .modal-contents, .bg-modal-downbanner .modal-contents, .bg-modal-linkChange .modal-contents, .bg-modal-upbanner .modal-contents, .bg-modal-downlink .modal-contents {
+  height: auto;
   width: 500px;
   background-color: white;
   text-align: center;
@@ -692,12 +775,12 @@ body {
   border-radius: 4px;
 }
 @media (max-width: 600px) {
-  .bg-modal-uplink .modal-contents, .bg-modal-downbanner .modal-contents, .bg-modal-upbanner .modal-contents, .bg-modal-downlink .modal-contents {
+  .bg-modal-uplink .modal-contents, .bg-modal-exit .modal-contents, .bg-modal-message .modal-contents, .bg-modal-downbanner .modal-contents, .bg-modal-linkChange .modal-contents, .bg-modal-upbanner .modal-contents, .bg-modal-downlink .modal-contents {
     width: 300px;
     padding: 0;
   }
 }
-.bg-modal-uplink .modal-contents .inputModal, .bg-modal-downbanner .modal-contents .inputModal, .bg-modal-upbanner .modal-contents .inputModal, .bg-modal-downlink .modal-contents .inputModal, .bg-modal-uplink .modal-contents a, .bg-modal-downbanner .modal-contents a, .bg-modal-upbanner .modal-contents a, .bg-modal-downlink .modal-contents a {
+.bg-modal-uplink .modal-contents .inputModal, .bg-modal-exit .modal-contents .inputModal, .bg-modal-message .modal-contents .inputModal, .bg-modal-downbanner .modal-contents .inputModal, .bg-modal-linkChange .modal-contents .inputModal, .bg-modal-upbanner .modal-contents .inputModal, .bg-modal-downlink .modal-contents .inputModal, .bg-modal-uplink .modal-contents a, .bg-modal-exit .modal-contents a, .bg-modal-message .modal-contents a, .bg-modal-downbanner .modal-contents a, .bg-modal-linkChange .modal-contents a, .bg-modal-upbanner .modal-contents a, .bg-modal-downlink .modal-contents a {
   margin: 15px auto;
   display: block;
   width: 300px;
@@ -705,26 +788,26 @@ body {
   border: 1px solid gray;
 }
 @media (max-width: 600px) {
-  .bg-modal-uplink .modal-contents .inputModal, .bg-modal-downbanner .modal-contents .inputModal, .bg-modal-upbanner .modal-contents .inputModal, .bg-modal-downlink .modal-contents .inputModal, .bg-modal-uplink .modal-contents a, .bg-modal-downbanner .modal-contents a, .bg-modal-upbanner .modal-contents a, .bg-modal-downlink .modal-contents a {
+  .bg-modal-uplink .modal-contents .inputModal, .bg-modal-exit .modal-contents .inputModal, .bg-modal-message .modal-contents .inputModal, .bg-modal-downbanner .modal-contents .inputModal, .bg-modal-linkChange .modal-contents .inputModal, .bg-modal-upbanner .modal-contents .inputModal, .bg-modal-downlink .modal-contents .inputModal, .bg-modal-uplink .modal-contents a, .bg-modal-exit .modal-contents a, .bg-modal-message .modal-contents a, .bg-modal-downbanner .modal-contents a, .bg-modal-linkChange .modal-contents a, .bg-modal-upbanner .modal-contents a, .bg-modal-downlink .modal-contents a {
     width: 80%;
   }
 }
-.bg-modal-uplink .modal-contents a, .bg-modal-downbanner .modal-contents a, .bg-modal-upbanner .modal-contents a, .bg-modal-downlink .modal-contents a {
+.bg-modal-uplink .modal-contents a, .bg-modal-exit .modal-contents a, .bg-modal-message .modal-contents a, .bg-modal-downbanner .modal-contents a, .bg-modal-linkChange .modal-contents a, .bg-modal-upbanner .modal-contents a, .bg-modal-downlink .modal-contents a {
   text-decoration: none;
   height: auto;
   font-size: 25px;
 }
-.bg-modal-uplink .modal-contents .contentTitle, .bg-modal-downbanner .modal-contents .contentTitle, .bg-modal-upbanner .modal-contents .contentTitle, .bg-modal-downlink .modal-contents .contentTitle {
+.bg-modal-uplink .modal-contents .contentTitle, .bg-modal-exit .modal-contents .contentTitle, .bg-modal-message .modal-contents .contentTitle, .bg-modal-downbanner .modal-contents .contentTitle, .bg-modal-linkChange .modal-contents .contentTitle, .bg-modal-upbanner .modal-contents .contentTitle, .bg-modal-downlink .modal-contents .contentTitle {
   padding: 10px 15px;
   border-bottom: 1px solid #ebebe8;
 }
-.bg-modal-uplink .modal-contents .contentTitle h1, .bg-modal-downbanner .modal-contents .contentTitle h1, .bg-modal-upbanner .modal-contents .contentTitle h1, .bg-modal-downlink .modal-contents .contentTitle h1 {
+.bg-modal-uplink .modal-contents .contentTitle h1, .bg-modal-exit .modal-contents .contentTitle h1, .bg-modal-message .modal-contents .contentTitle h1, .bg-modal-downbanner .modal-contents .contentTitle h1, .bg-modal-linkChange .modal-contents .contentTitle h1, .bg-modal-upbanner .modal-contents .contentTitle h1, .bg-modal-downlink .modal-contents .contentTitle h1 {
   font-size: 17px;
   margin: 0;
   color: #919191;
   text-transform: uppercase;
 }
-.bg-modal-uplink .modal-contents .close, .bg-modal-downbanner .modal-contents .close, .bg-modal-upbanner .modal-contents .close, .bg-modal-downlink .modal-contents .close {
+.bg-modal-uplink .modal-contents .close, .bg-modal-exit .modal-contents .close, .bg-modal-message .modal-contents .close, .bg-modal-downbanner .modal-contents .close, .bg-modal-linkChange .modal-contents .close, .bg-modal-upbanner .modal-contents .close, .bg-modal-downlink .modal-contents .close {
   position: absolute;
   top: 0;
   right: 10px;
@@ -733,8 +816,81 @@ body {
   transform: rotate(45deg);
   cursor: pointer;
 }
-.bg-modal-uplink .modal-contents .close:hover, .bg-modal-downbanner .modal-contents .close:hover, .bg-modal-upbanner .modal-contents .close:hover, .bg-modal-downlink .modal-contents .close:hover {
+.bg-modal-uplink .modal-contents .close:hover, .bg-modal-exit .modal-contents .close:hover, .bg-modal-message .modal-contents .close:hover, .bg-modal-downbanner .modal-contents .close:hover, .bg-modal-linkChange .modal-contents .close:hover, .bg-modal-upbanner .modal-contents .close:hover, .bg-modal-downlink .modal-contents .close:hover {
   color: #666;
+}
+
+.bg-modal-message {
+  width: 100%;
+  z-index: 10;
+}
+.bg-modal-message .modal-contents {
+  text-align: left;
+  padding: 0;
+  height: 480px;
+  width: 700px;
+}
+.bg-modal-message .modal-contents .chat .profile {
+  margin: 10px;
+  border-bottom: 2px solid #ebebe8;
+}
+.bg-modal-message .modal-contents .chat .profile .profilePic {
+  padding: 15px 15px;
+  border-radius: 50%;
+  background-image: url("http://i.stack.imgur.com/Dj7eP.jpg");
+  width: 50px;
+  height: 50px;
+  background-size: cover;
+  margin: 10px;
+  cursor: pointer;
+}
+.bg-modal-message .modal-contents .chat .profile div p {
+  color: #46657b;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 3px 0;
+}
+.bg-modal-message .modal-contents .chat .profile div .online {
+  border-radius: 4px;
+  display: inline-block;
+  font-weight: initial;
+  color: white;
+  font-size: 15px;
+  padding: 5px;
+  background: #04ae00;
+}
+.bg-modal-message .modal-contents .chat .conversation {
+  height: 250px;
+  border-bottom: 2px solid #ebebe8;
+}
+.bg-modal-message .modal-contents .chat .field {
+  margin: 10px;
+}
+.bg-modal-message .modal-contents .chat .field input {
+  box-sizing: border-box;
+  width: 85%;
+  margin: 0 10px;
+  height: 35px;
+  background-image: image("images/icons/message.svg");
+}
+.bg-modal-message .modal-contents .chat .field button {
+  font-size: 20px;
+}
+
+.bg-modal-exit {
+  width: 100%;
+  z-index: 10;
+}
+.bg-modal-exit .exitButtons {
+  margin: 20px 0;
+}
+.bg-modal-exit .exitButtons button {
+  background: #979797;
+  font-size: 20px;
+  padding: 10px;
+}
+.bg-modal-exit .exitButtons button:hover {
+  background-color: #f58220;
 }
 
 /*# sourceMappingURL=style.css.map */
