--- a/sass/sections/_general.scss
+++ b/sass/sections/_general.scss
@@ -1,26 +1,33 @@
 .calendar {
   justify-content: center;
   padding: 30px 0;
-  border-bottom: 1px solid #ebebe8;
+  border-bottom: 2px solid #ebebe8;
   justify-content: center;
   margin: auto;
   @media (max-width: 480px) {
     flex-direction: column;
     text-align: center;
   }
-  input {
-    height: 40px;
-    box-sizing: border-box;
-    border: 1px solid #ebebe8;
-    padding: 5px;
-    width: 120px;
+  label {
+    input {
+      height: 40px;
+      box-sizing: border-box;
+      border: 1px solid #ebebe8;
+      padding: 5px;
+      width: 120px;
+      @media (max-width: 480px) {
+        width: 180px;
+        margin-bottom: 15px;
+      }
+    }
   }
+
   button {
     align-items: center;
     margin-left: 15px;
     @media (max-width: 480px) {
       margin: 0 auto;
-      width: 70%;
+      width: 40%;
     }
     svg {
       height: auto;
@@ -40,7 +47,7 @@
     }
     .stat {
       width: 30%;
-      border-bottom: 1px solid #ebebe8;
+      border-bottom: 2px solid #ebebe8;
       justify-content: space-between;
       min-width: 150px;
       @media (max-width: 480px) {
