--- a/sass/sections/_links.scss
+++ b/sass/sections/_links.scss
@@ -3,10 +3,7 @@
   button {
     padding: 0 15px;
     margin: 20px 0;
-    p {
-      margin: auto 0;
-      font-size: 20px;
-    }
+    font-size: 20px;
   }
 }
 
@@ -31,12 +28,17 @@
         }
       }
     }
+    li:last-of-type {
+      border-bottom: 2px solid #ebebe8;
+    }
     .linkEl {
       display: flex;
       width: 80%;
       justify-content: space-between;
       @media (max-width: 480px) {
         flex-direction: column;
+        width: 70%;
+        text-align: left;
       }
       p {
         display: inline-block;
@@ -45,11 +47,14 @@
       }
       a {
         display: inline-block;
-        margin: auto 0;
+        margin: 16px 5px;
         text-decoration: none;
         color: #46657b;
         overflow: hidden;
         text-overflow: ellipsis;
+        @media (max-width: 480px) {
+          margin-bottom: 10px;
+        }
       }
     }
     .linkControl {
@@ -62,6 +67,9 @@
         cursor: pointer;
         &:hover {
           fill: orange;
+        }
+        @media (max-width: 480px) {
+          opacity: 1;
         }
       }
     }
