--- a/sass/sections/_payout.scss
+++ b/sass/sections/_payout.scss
@@ -4,29 +4,72 @@
     border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
-    border: 1px solid #ddd;
-    th,
+    border-bottom: 2px solid #ddd;
+    p {
+      display: inline-block;
+      font-size: 15px;
+      color: #919191;
+      padding: 7px;
+      &:hover {
+        background: #f6f6f6;
+        color: black;
+        svg {
+          opacity: 1;
+        }
+      }
+      svg {
+        width: 10px;
+        margin: auto 5px;
+        opacity: 0;
+      }
+    }
+    th {
+      text-align: left;
+      padding: 10px 15px;
+    }
     td {
       text-align: left;
-      padding: 10px 8px;
+      padding: 10px 15px;
+      height: 30px;
     }
     tr {
-      border-bottom: 1px solid #ebebe8;
+      border-bottom: 2px solid #ebebe8;
+      cursor: pointer;
       &:hover {
         background: #eaeaea;
+      }
+    }
+    .tableHead {
+      &:hover {
+        background: initial;
       }
     }
   }
 }
 .pagination {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   padding: 15px 0;
-  a {
-    color: black;
-    float: left;
-    padding: 8px 16px;
-    text-decoration: none;
+  margin: auto;
+  div {
+    display: flex;
+    flex-direction: row;
+    overflow-y: auto;
+    a {
+      display: inline-block;
+      color: #46657b;
+      padding: 8px 16px;
+      text-decoration: none;
+      &:hover {
+        background: #f4f4f1;
+        color: black;
+      }
+      svg {
+        fill: black;
+        width: 10px;
+      }
+    }
   }
 }
