--- a/sass/sections/_topBar.scss
+++ b/sass/sections/_topBar.scss
@@ -3,12 +3,13 @@
   box-sizing: border-box;
   height: auto;
   position: fixed;
+  background: white;
   top: 0;
   left: 0;
   margin: 0;
   width: 100%;
-  background-color: white;
   z-index: 1;
+  border-bottom: 1px solid #ebebe8;
   .show {
     @media (min-width: 601px) {
       display: flex;
@@ -17,7 +18,9 @@
   @media (max-width: 600px) {
     width: 100%;
     flex-direction: column;
-    height: 100vh;
+    height: auto;
+    background: initial;
+    border: none;
   }
   .toplinks {
     @media (max-width: 600px) {
@@ -61,7 +64,6 @@
     }
   }
   & > ul {
-    border-bottom: 1px solid #ebebe8;
     border-top: 1px solid #ebebe8;
     padding: 0;
     margin: 0;
@@ -92,7 +94,7 @@
       }
     }
     li {
-      height: 50px;
+      height: 60px;
       border-left: 1px solid #ebebe8;
       box-sizing: border-box;
       @media (max-width: 767px) {
